DanielWagnerHall for AjayKemparaj: Code cleanup. Fixes issue 2363.
r13674